<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkAreaActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/north_pavallion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/north_pavallion"
        android:onClick="north_pavallion_btn"/>

    <Button
        android:id="@+id/south_pavallion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south_pavallion"
        android:onClick="south_pavallion_btn"/>


    <Button
        android:id="@+id/east_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/east_gallery"
        android:onClick="east_gallery_btn"/>


    <Button
        android:id="@+id/west_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/west_gallery"
        android:onClick="west_gallery_btn"/>

    <Button
        android:id="@+id/admin_block_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_block"
        android:onClick="admin_block_btn"/>

</LinearLayout>