<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NorthPavallionActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/outer_periphery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outer_periferry"
        android:onClick="work_specification_btn"/>

    <Button
        android:id="@+id/ground_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ground_floor"
        android:onClick="work_specification_btn"/>

    <Button
            android:id="@+id/media_box_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_box"
        android:onClick="work_specification_btn"/>

    <Button
        android:id="@+id/second_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_floor"
        android:onClick="work_specification_btn"/>

    <Button
        android:id="@+id/third_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_floor"
        android:onClick="work_specification_btn"/>
</LinearLayout>