<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkSpecificationActivity"
    android:orientation="vertical"
    >


    <Button
        android:id="@+id/infrastructure_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infrastructure"
        android:onClick="infrastructure_btn"/>

    <Button
        android:id="@+id/chair_maintainance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chair_maintainance"
        android:onClick="chair_maintainance_btn"/>

    <Button
        android:id="@+id/electricity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/electricity"
        android:onClick="electricity_btn"/>

    <Button
        android:id="@+id/house_keeping_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/house_keeping"
        android:onClick="house_keeping_btn"/>

    <Button
        android:id="@+id/any_other_specification_issue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/any_other_specification_issue"
        android:onClick="other_issue_btn"/>

</LinearLayout>