<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminBlockActivity">

    <Button
        android:id="@+id/admin_first_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_floor"
        android:onClick="work_specification_btn"/>
    <Button
        android:id="@+id/admin_second_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_floor"
        android:onClick="work_specification_btn"/>

    <Button
        android:id="@+id/admin_third_floor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_floor"
        android:onClick="work_specification_btn"/>

</LinearLayout>